<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/softBackground"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="Kahve Uygulaması"
            android:titleTextColor="@android:color/white"
            android:elevation="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_regular"
                android:text="CaffeineGo"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:src="@drawable/cafe_latte"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
                >
            </com.google.android.material.imageview.ShapeableImageView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:elevation="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.Material3.CardView.Filled"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="176 kcal"
                    android:padding="5dp"
                    />
            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_regular"
                android:text="Cafe Latte,"
                android:textSize="40sp"
                android:textColor="@color/black"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:fontFamily="@font/pacifico_regular"
                android:textSize="40sp"
                android:text="Tall"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cafeLatteDescription"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_serif"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:textSize="25sp"
            android:fontFamily="@font/noto_serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/Add_to_order"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/croissant"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/baseline_add_24"
                        android:gravity="center"
                        android:layout_gravity="end|top"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/orange200"
                        style="@style/Widget.Material3.Button.IconButton"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                        />
                </FrameLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/croissant"
                    android:fontFamily="@font/noto_serif"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/croissantPrice"
                    android:fontFamily="@font/noto_serif"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/brownie"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/baseline_add_24"
                        android:gravity="center"
                        android:layout_gravity="end|top"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/orange200"
                        style="@style/Widget.Material3.Button.IconButton"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                        />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/brownie"
                    android:fontFamily="@font/noto_serif"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/browniePrice"
                    android:fontFamily="@font/noto_serif"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/muffin"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/baseline_add_24"
                        android:gravity="center"
                        android:layout_gravity="end|top"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/orange200"
                        style="@style/Widget.Material3.Button.IconButton"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                        />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/Muffin"
                    android:fontFamily="@font/noto_serif"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muffinPrice"
                    android:fontFamily="@font/noto_serif"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
            android:backgroundTint="@color/orange200"
            android:text="@string/Add_to_Card"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/noto_serif"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Talha Kaşıkcı"
            android:gravity="center"
            />



    </LinearLayout>

</ScrollView>


